# timer

./: CMakeLists.txt  README.md  main.cpp  main.qml  resources.qrc
